Add all EventListeners and some missing handle Code